# roci-2d

./: CMakeLists.txt
assets/textures/: bashi-bazouk.xcf  missile-orig.xcf  missile-small.xcf  pdc-bullet.xcf  roci-whitebg.xcf
include/: asteroids.hpp  ballistics.hpp  collision.hpp  components.hpp  damage.hpp  ecs.hpp  enemyai.hpp  explosion.hpp  hud.hpp  pdctarget.hpp  targeting.hpp  torpedoai.hpp  torpedotarget.hpp  utils.hpp
src/: hud.cpp  main.cpp  ships.cpp
